# ConvertAndQuantizeLibrary

./: .gitignore  LICENSE  MANIFEST.in  README.md  TRANSFORMATION_SUMMARY.md  convert_fp8_svd_learn_w_blockwise.py  pyproject.toml  quantization_log.txt  setup.py
convert_and_quantize/: __init__.py  api.py  cli.py  constants.py
convert_and_quantize/core/: __init__.py  converter.py
convert_and_quantize/optimizers/: __init__.py  optimizer_impl.py
convert_and_quantize/utils/: __init__.py  util_functions.py
docs/: API.md  CONTRIBUTING.md  INSTALLATION.md  QUICKSTART.md
examples/: 01_basic_quantization.py  02_compare_optimizers.py  03_block_vs_tensor_scaling.py  04_quantize_safetensors.py
requirements/: cu130.txt
scripts/: quant_save_runner.py  quant_test_runner.py  verify_save.py
tests/: __init__.py  test_basic.py
