[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "convert-and-quantize"
version = "0.1.0"
description = "Advanced quantization framework for neural networks - Convert models to FP8 with learned adaptive rounding"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "silveroxides", email = "silveroxides@example.com"}
]
keywords = ["quantization", "fp8", "neural-networks", "model-optimization", "svd"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
requires-python = ">=3.8"
dependencies = [
    "safetensors>=0.3.0",
    "tqdm>=4.60.0",
]

[project.optional-dependencies]
cu118 = [
    "torch>=1.13.0",
    "torchvision",
    "torchaudio",
]
cu121 = [
    "torch>=1.13.0",
    "torchvision",
    "torchaudio",
]
cu124 = [
    "torch>=1.13.0",
    "torchvision",
    "torchaudio",
]
cu126 = [
    "torch>=1.13.0",
    "torchvision",
    "torchaudio",
]
cu128 = [
    "torch>=1.13.0",
    "torchvision",
    "torchaudio",
]
cu130 = [
    "torch>=1.13.0",
    "torchvision",
    "torchaudio",
]
cpu = [
    "torch>=1.13.0",
    "torchvision",
    "torchaudio",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.0",
    "flake8>=6.0",
    "mypy>=1.0",
]
prodigy = [
    "prodigyplus>=0.1.0",
]
all = [
    "convert-and-quantize[dev,prodigy]",
]

[project.urls]
Homepage = "https://github.com/silveroxides/ConvertAndQuantizeLibrary"
Repository = "https://github.com/silveroxides/ConvertAndQuantizeLibrary.git"
"Bug Tracker" = "https://github.com/silveroxides/ConvertAndQuantizeLibrary/issues"
Documentation = "https://github.com/silveroxides/ConvertAndQuantizeLibrary/tree/main/docs"

[project.scripts]
convert-and-quantize = "convert_and_quantize.cli:main"

[tool.setuptools]
packages = ["convert_and_quantize"]

[tool.setuptools.package-data]
convert_and_quantize = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
