[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "convert-and-quantize"
version = "1.0.0"
description = "Advanced quantization framework for neural networks - Convert models to FP8 with learned adaptive rounding"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "silveroxides"}
]
keywords = ["quantization", "fp8", "neural-networks", "model-optimization", "svd"]
classifiers = [
    "Development Status :: 2 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
requires-python = ">=3.8"
dependencies = [
    "safetensors>=0.3.0",
    "tqdm>=4.60.0",
]

[project.optional-dependencies]
prodigy = [
    "prodigy-plus-schedule-free",
]
all = [
    "convert-and-quantize[prodigy]",
]

[project.urls]
Homepage = "https://github.com/silveroxides/ConvertAndQuantizeLibrary"
Repository = "https://github.com/silveroxides/ConvertAndQuantizeLibrary.git"
"Bug Tracker" = "https://github.com/silveroxides/ConvertAndQuantizeLibrary/issues"
Documentation = "https://github.com/silveroxides/ConvertAndQuantizeLibrary/tree/main/docs"

[project.scripts]
convert-and-quantize = "convert_and_quantize.cli:main"

[tool.setuptools]
packages = ["convert_and_quantize"]

[tool.setuptools.package-data]
convert_and_quantize = ["py.typed"]
